--- a/moe/configs/ds_config.json
+++ b/moe/configs/ds_config.json
@@ -9,5 +9,15 @@
         "enabled": true,
         "initial_scale_power": 12
     },
-    "wall_clock_breakdown": true
+    "wall_clock_breakdown": true,
+    "tensorboard": {
+        "enabled": true,
+        "output_path": "output/ds_logs/",
+        "job_name": "train_moe"
+    },
+    "csv_monitor": {
+        "enabled": true,
+        "output_path": "output/ds_logs/",
+        "job_name": "train_moe"
+    }
 }
